# brontes-tui

./: .gitignore  README.md
brontes-tui/: Cargo.toml  brontes.tape
brontes-tui/src/: app.rs  main.rs  root.rs  tabs.rs  term.rs
brontes-tui/src/tabs/: analytics.rs  dashboard.rs  livestream.rs  metrics.rs  mev_detail.rs  notifications.rs  protocols.rs  settings.rs  tokens.rs
